# errorRate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  errorRate.cpp  errorRate.hpp  main.cpp
example/: 1.txt  2.txt
unit_test/: CMakeLists.txt  test_errorRate.cpp
